# nizam

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  USAGE.md
docs/alpine/: nizam-bootstrap-alpine.sh
nizam-common/applications/: nizam-dock.desktop  nizam-explorer.desktop  nizam-panel.desktop  nizam-settings.desktop  nizam-terminal.desktop  nizam-text.desktop
nizam-common/data/schemas/: com.nizam.desktop.gschema.xml
nizam-common/gtk3/: NizamAbout.vala  NizamAppWindow.vala  libcmark-gfm.vapi  nizam-gtk3.css
nizam-common/icons/hicolor/: icon-theme.cache
nizam-common/src/: nizam_gsettings.vala
nizam-dock/: meson.build
nizam-dock/include/: cairo_draw.h  config.h  icon_policy.h  icon_surface_cache.h  sni.h  xcb_app.h
nizam-dock/src/: cairo_draw.c  config.c  icon_policy.c  icon_surface_cache.c  main.c  meson.build  sni.c  xcb_app.c
nizam-dock/tests/: meson.build  test_icon_cache.c
nizam-explorer/: meson.build
nizam-explorer/src/: app.vala  config_db.vala  glist_utils.c  history.vala  meson.build  model.vala  version.vala.in  window.vala
nizam-explorer/tests/: test_history.vala
nizam-panel/: meson.build
nizam-panel/src/: clock.c  main.c  menu.c  meson.build  panel_shared.h  tasklist.c
nizam-settings/: meson.build  meson_options.txt
nizam-settings/data/ui/pekwm/theme/: theme
nizam-settings/src/: config.vala.in  main.vala  meson.build
nizam-settings/src/applications/: ApplicationsPage.vala  DesktopEntryIO.vala  DesktopEntryImporter.vala  DesktopEntryModel.vala  DesktopEntryScanner.vala  DesktopEntryStore.vala  DesktopEntryUtils.vala
nizam-settings/src/db/: db.vala  migrations.vala  settings_store.vala
nizam-settings/src/gtk/: GtkThemeScanner.vala  gtk_dialog_helpers.c
nizam-settings/src/pages/: GtkPage.vala
nizam-settings/src/pekwm/: PekwmApplier.vala  PekwmAutostart.vala  PekwmBackend.vala  PekwmMenu.vala  PekwmPaths.vala  PekwmRenderer.vala  PekwmStart.vala  PekwmThemeBuilder.vala
nizam-settings/src/ui/: page_pekwm.vala  window.vala
nizam-settings/tests/: meson.build  test_gsettings.vala  test_pekwm_apply.vala
nizam-terminal/: meson.build
nizam-terminal/src/: main.vala  meson.build  terminal_tab.vala  terminal_window.vala  x11_rootpixmap.c  x11_rootpixmap.h  x11_rootpixmap.vapi
nizam-text/: meson.build  meson_options.txt
nizam-text/src/: line_number_area.vala  main.vala  meson.build  text_document.vala  text_window.vala  wrap_guide_area.vala
tools/: strip_comments.sh
tools/perf/: perf.sh  valgrind.supp  valgrind_run.sh
